--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
   "packageManager": "pnpm@7.21.0",
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "repositoryUrl": "https://github.com/ccreusat/semantic-release-test"
 }
