--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "repositoryUrl": "https://github.com/ccreusat/semantic-release-test"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ccreusat/semantic-release-test.git"
+  }
 }
