--- a/.releaserc
+++ b/.releaserc
@@ -11,5 +11,6 @@
       "name": "next",
       "prerelease": true
     }
-  ]
+  ],
+  "repositoryUrl": "https://github.com/ccreusat/semantic-release-test"
 }
