--- a/.releaserc
+++ b/.releaserc
@@ -12,5 +12,5 @@
       "prerelease": true
     }
   ],
-  "repositoryUrl": "https://github.com/ccreusat/semantic-release-test"
+  "repositoryUrl": "https://github.com/ccreusat/semantic-release-test.git"
 }
