--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,19 @@
 name: Semantic release
-on: [push]
+"on":
+  push:
+    branches:
+      - main
+      - next
+      - beta
+      - "*.x"
+permissions:
+  contents: read #  for checkout
 jobs:
   release:
+    permissions:
+      contents: write #  to be able to publish a GitHub release
+      issues: write #  to be able to comment on released issues
+      pull-requests: write #  to be able to comment on released pull requests
     name: Release
     runs-on: ubuntu-latest
     steps:
@@ -31,8 +43,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - run: pnpm install
-      - name: Release
+      - run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
