--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sem",
+  "name": "@ccreusat/semantic-release-test",
   "version": "1.0.0-next.3",
   "type": "module",
   "scripts": {
