--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@ccreusat/semantic-release-test",
+  "name": "ccreusat-semantic-release-test",
+  "private": false,
   "version": "1.0.0-next.3",
   "type": "module",
   "scripts": {
