ci: configure dev branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,8 @@ name: Semantic release
   push:
     branches:
       - main
+      - dev
       - next
-      - beta
-      - "*.x"
 permissions:
   contents: read #  for checkout
 jobs:
